--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,297 @@
+:root {
+  --primary-color: #4caf50;
+  --secondary-color: #ffffff;
+  --accent-color: #ffc107;
+  --complementary-color: #212121;
+  --link-desktop-size: 1.1em;
+  --link-mobile-size: 1em;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Work Sans", sans-serif;
+  background-color: var(--secondary-color);
+  color: var(--complementary-color);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Slab", serif;
+  color: var(--primary-color);
+}
+a {
+  font-family: "Ubuntu", sans-serif;
+}
+.button,
+.btn {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+.button:hover,
+.btn:hover {
+  background-color: var(--accent-color);
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
+  .navbar {
+    background-color: var(--primary-color);
+    padding: 10px;
+  }
+  .navbar .navbar-brand img {
+    width: 80px;
+    transform: scale(1.1);
+  }
+  .navbar .dropdown-menu {
+    border-radius: 0px;
+  }
+  .navbar .navbar-toggler {
+    border: none;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 3px;
+    background-color: var(--accent-color);
+    margin: 8px 0;
+    transition: 0.4s;
+  }
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  .change .bar2 {opacity: 0;}
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
+  .navbar .dropdown-menu .dropdown-item:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .navbar-nav .nav-link {
+    color: white;
+    font-weight: 600;
+    font-size: var(--link-mobile-size);
+  }
+  .navbar .navbar-nav .active {
+    color: var(--accent-color);
+  }
+  .navbar form select {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    font-size: 14px;
+    outline: none;
+    border: 0px;
+    border: 0px;
+    display: none;
+  }
+  .navbar form .search-input {
+    object-fit: cover;
+    width: 200px;
+    outline: none;
+    border-radius: 20px 0px 0px 20px;
+  }
+  .navbar form #search-button {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    outline: none;
+    border: 0px;
+  }
+  .navbar form #search-button:hover {
+    background-color: var(--complementary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .icon-container {
+    align-items: first baseline;
+    column-gap: 10px;
+    float: left;
+    margin-top: 10px;
+  }
+  
+  .navbar .icon-container i {
+    margin-right: 5px;
+    color: var(--accent-color);
+    transition: 0.5s ease;
+    font-size: 1.2em;
+  }
+  .navbar .icon-container a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: var(--link-mobile-size);
+  }
+  .navbar .icon-container a:hover i {
+    transition: 0.5s ease;
+    color: #ff9f29;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-
+  .navbar {
+    background-color: var(--primary-color);
+    padding: 10px;
+  }
+  .navbar .navbar-brand img {
+    width: 80px;
+    transform: scale(1.1);
+  }
+  .navbar .dropdown-menu {
+    border-radius: 0px;
+  }
+  .navbar .navbar-toggler {
+    border: none;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 3px;
+    background-color: var(--accent-color);
+    margin: 8px 0;
+    transition: 0.4s;
+  }
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  .change .bar2 {opacity: 0;}
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
+  .navbar .dropdown-menu .dropdown-item:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .navbar-nav .nav-link {
+    color: white;
+    font-weight: 600;
+    font-size: var(--link-mobile-size);
+  }
+  .navbar .navbar-nav .active {
+    color: var(--accent-color);
+  }
+  .navbar form select {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    font-size: 14px;
+    outline: none;
+    border: 0px;
+    border: 0px;
+  }
+  .navbar form .search-input {
+    object-fit: cover;
+    width: 200px;
+    outline: none;
+    border-radius: 20px 0px 0px 20px;
+  }
+  .navbar form #search-button {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    outline: none;
+    border: 0px;
+  }
+  .navbar form #search-button:hover {
+    background-color: var(--complementary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .icon-container {
+    align-items: first baseline;
+    column-gap: 10px;
+    float: left;
+    margin-top: 10px;
+  }
+  
+  .navbar .icon-container i {
+    margin-right: 5px;
+    color: var(--accent-color);
+    transition: 0.5s ease;
+    font-size: 1.2em;
+  }
+  .navbar .icon-container a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: var(--link-mobile-size);
+  }
+  .navbar .icon-container a:hover i {
+    transition: 0.5s ease;
+    color: #ff9f29;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    
+  .navbar {
+    background-color: var(--primary-color);
+    padding: 10px 30px 10px 30px;
+  }
+  .navbar .navbar-brand img {
+    width: 100px;
+    transform: scale(1.2);
+  }
+  .navbar .dropdown-menu {
+    border-radius: 0px;
+  }
+  .navbar .dropdown-menu .dropdown-item:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .navbar-nav .nav-link {
+    color: white;
+    font-weight: 600;
+    font-size: var(--link-desktop-size);
+  }
+  .navbar .navbar-nav .active {
+    color: var(--accent-color);
+  }
+  .navbar form select {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    font-size: 14px;
+    outline: none;
+    border: 0px;
+    border: 0px;
+  }
+  .navbar form .search-input {
+    object-fit: cover;
+    width: 200px;
+    outline: none;
+  }
+  .navbar form #search-button {
+    background-color: #2c3333;
+    color: var(--secondary-color);
+    outline: none;
+    border: 0px;
+  }
+  .navbar form #search-button:hover {
+    background-color: var(--complementary-color);
+    color: var(--secondary-color);
+  }
+  .navbar .icon-container {
+    align-items: first baseline;
+    column-gap: 20px;
+  }
+  .navbar .icon-container i {
+    margin-right: 5px;
+    color: var(--accent-color);
+    transition: 0.5s ease;
+    font-size: 1.2em;
+  }
+  .navbar .icon-container a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: var(--link-desktop-size);
+  }
+  .navbar .icon-container a:hover i {
+    transition: 0.5s ease;
+    color: #ff9f29;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-    
+  
 }
