--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,51 @@ a {
 .btn:hover {
   background-color: var(--accent-color);
 }
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+#loader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  #loader img {
+    width: 150px;
+    border-radius: 50%;
+    animation: blink 1s infinite;
+  }
+  .loader-text {
+    margin-top: 10px;
+    font-family: "Belanosima", sans-serif;
+    color: var(--secondary-color);
+    font-size: 1em;
+  }
   .navbar {
     background-color: var(--primary-color);
     padding: 10px;
@@ -383,6 +426,17 @@ a {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  #loader img {
+    width: 300px;
+    border-radius: 50%;
+    animation: blink 1s infinite;
+  }
+  .loader-text {
+    margin-top: 10px;
+    font-family: "Belanosima", sans-serif;
+    color: var(--secondary-color);
+    font-size: 1.2em;
+  }
   .navbar {
     background-color: var(--primary-color);
     padding: 10px 30px 10px 30px;
