--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,91 @@ a {
     transition: 0.5s ease;
     color: #ff9f29;
   }
+  #carouselExampleCaptions{
+    height: 50vh;
+    overflow: hidden;
+  }
+  #carouselExampleCaptions  .carousel-inner, #carouselExampleCaptions  .carousel-item{
+    height: 50vh;
+  }
+  #carouselExampleCaptions  .carousel-inner img{
+    width: auto;
+    height: 50vh;
+    object-fit: cover;
+  }
+  #carouselExampleCaptions .carousel-caption{
+    top: 37%; 
+    left: 30%; 
+    transform: translate(-50%, -50%);
+    color: var(--complementary-color);
+  }
+  #carouselExampleCaptions .carousel-caption h5{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-size: 2.1rem;
+    margin-bottom: 10px;
+  }
+  #carouselExampleCaptions .carousel-caption p{
+    width: 100%;
+    font-family: 'Satisfy', cursive;
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+  }
+  #carouselExampleCaptions .carousel-caption .btn{
+    outline: none;
+    border: 1px solid var(--primary-color);
+    background-color: transparent;
+    color: var(--complementary-color);
+    border-radius: 0px;
+    font-family: 'Belanosima', sans-serif;
+    font-size: 0.8rem;
+  }
+  #carouselExampleCaptions .carousel-caption .btn:hover{
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+  #carouselExampleCaptions .carousel-control-prev, #carouselExampleCaptions .carousel-control-next{
+    background-color: var(--primary-color);
+    height: 25px;
+    width: 25px;
+    padding: 20px;
+    margin: auto;
+    color: var(--complementary-color);
+    opacity: 1;
+    display: none;
+  }
+  #carouselExampleCaptions .carousel-control-prev:hover, #carouselExampleCaptions .carousel-control-next:hover{
+    opacity: 0.9;
+  }
+  #carouselExampleCaptions .carousel-indicators button{
+    background-color: var(--primary-color);
+    height: 5px;
+    opacity: 1;
+  }
+  #carouselExampleCaptions .carousel-indicators .active{
+    color: var(--complementary-color);
+    background-color: #212121;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   footer {
     background-color: var(--primary-color);
     clear: both;
@@ -502,6 +587,84 @@ a {
     transition: 0.5s ease;
     color: #ff9f29;
   }
+
+  #carouselExampleCaptions{
+    height: 650px;
+    overflow: hidden;
+  }
+  #carouselExampleCaptions  .carousel-inner, #carouselExampleCaptions  .carousel-item{
+    height: 650px;
+  }
+  #carouselExampleCaptions  .carousel-inner img{
+    height: 650;
+    object-fit: cover;
+  }
+  #carouselExampleCaptions .carousel-caption{
+    top: 50%; 
+    left: 25%; 
+    transform: translate(-50%, -50%);
+    color: var(--complementary-color);
+  }
+  #carouselExampleCaptions .carousel-caption h5{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-size: 4rem;
+    margin-bottom: 20px;
+  }
+  #carouselExampleCaptions .carousel-caption p{
+    font-family: 'Satisfy', cursive;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+  #carouselExampleCaptions .carousel-caption .btn{
+    outline: none;
+    border: 1px solid var(--primary-color);
+    background-color: transparent;
+    color: var(--complementary-color);
+    border-radius: 0px;
+    font-family: 'Belanosima', sans-serif;
+    font-size: 1.1rem;
+  }
+  #carouselExampleCaptions .carousel-caption .btn:hover{
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+  #carouselExampleCaptions .carousel-control-prev, #carouselExampleCaptions .carousel-control-next{
+    background-color: var(--primary-color);
+    height: 50px;
+    width: 50px;
+    margin: auto;
+    color: var(--complementary-color);
+    opacity: 1;
+  }
+  #carouselExampleCaptions .carousel-control-prev:hover, #carouselExampleCaptions .carousel-control-next:hover{
+    opacity: 0.9;
+  }
+  #carouselExampleCaptions .carousel-indicators button{
+    background-color: var(--primary-color);
+    height: 10px;
+    opacity: 1;
+  }
+  #carouselExampleCaptions .carousel-indicators .active{
+    color: var(--complementary-color);
+    background-color: #212121;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   footer {
     background-color: var(--primary-color);
